# Diagrams.net-Automation

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  sources.list
.github/workflows/: python-publish.yml
diagrams_net_automation/: __init__.py  converter.py  main.py  utils.py
